Adding administrator registration functionality (#8)
Now, an admin can create another admin using the route 'create-user'
